# himalayadb

./: Cargo.toml  README.md  build.rs  docker-compose.yml
benches/: bench_main.rs
benches/benchmarks/: coordinator.rs  helpers.rs  himalaya.rs  mod.rs  rocksdb.rs
proto/: himalaya.proto  himalaya_core.proto  himalaya_internal.proto  himalaya_master.proto  himalaya_worker.proto  himalayadb.proto
src/: client.rs  main.rs  server.rs
src/client/: main.rs  options.yaml
src/himalaya/: configuration.rs  conn.rs  coordinator.rs  core.rs  external_server.rs  internal_server.rs  lib.rs  main.rs  metadata.rs  options.yaml  proto.rs  server.rs  telemetry.rs
src/himalaya/node/: mod.rs  partitioner.rs  topology.rs
src/himalaya/node/metadata/: etcd.rs  mod.rs
src/himalaya/server/: external.rs  internal.rs  mod.rs  server.rs
src/himalaya/storage/: mod.rs  rocksbd.rs
src/master/: main.rs  server.rs
src/worker/: cli.yml  main.rs  server.rs
tests/himalaya/: helpers.rs  main.rs  server.rs
tests/himalaya/node/: mod.rs  topology.rs
tests/himalaya/node/metadata/: etcd.rs
