[package]
name = "himalayadb"
version = "0.1.0"
authors = ["Spencer McCreary <spencermccreary@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7.0"
rocksdb = "0.15.0"
tonic = "0.4.0"

[build-dependencies]
tonic-build = "0.4.0"
