[package]
name = "himalayadb"
version = "0.1.0"
authors = ["Spencer McCreary <spencermccreary@gmail.com>"]
edition = "2018"

[[bin]]
name = "himalayadb"
path = "src/main.rs"

[[bin]]
name = "himalaya-client"
path = "src/client.rs"

[dependencies]
prost = "0.7.0"
rocksdb = "0.15.0"
tonic = "0.4.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }
tracing = "0.1.16"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1.11"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-bunyan-formatter = "0.1.7"
uuid = { version = "0.8.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.4.0"
